Update and rename sample_config.env to config.env

--- a/config.env
+++ b/config.env
@@ -3,11 +3,11 @@
 
 #________COMPULSORY____________#
 
-TG_BOT_TOKEN = ""  # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-APP_ID = 
-API_HASH = ""
-OWNER_ID = 
-AUTH_CHANNEL = "" #Add IDs separated by a SPACE (Like :: -10012503747 -10012586941 539295917)
+TG_BOT_TOKEN = "2132384462:AAE4fY-hDAWh8wac8gsbHZoDiEIjHy5aN6k"  # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
+APP_ID = 6682330
+API_HASH = "a1c264a07c3d7e1eedc83c746a4a9777"
+OWNER_ID = 1669772418
+AUTH_CHANNEL = "-1001523303763" #Add IDs separated by a SPACE (Like :: -10012503747 -10012586941 539295917)
 
 
 #________NOT COMPULSORY____________#
@@ -15,7 +15,7 @@ AUTH_CHANNEL = "" #Add IDs separated by a SPACE (Like :: -10012503747 -100125869
 # For RCLONE ::
 # Name of the folder....not ID
 DESTINATION_FOLDER = "TorrentLeech-Gdrive"
-INDEX_LINK = ""
+INDEX_LINK = "https://gindex.tanujairamtanu.workers.dev/0:/"
 
 # OTHERS ::
 DEF_THUMB_NAIL_VID_S = ""
@@ -27,7 +27,7 @@ MAX_TG_SPLIT_FILE_SIZE = "2097152000"
 FINISHED_PROGRESS_STR = ""
 UN_FINISHED_PROGRESS_STR = ""
 
-CUSTOM_FILE_NAME = ""
+CUSTOM_FILE_NAME = "@anjumani_zone"
 
 UPLOAD_AS_DOC = ""
 
